# FreeNeRF-nerfstudio

./: .gitignore  README.md  pyproject.toml
FreeNeRF/: encoding.py  free_nerf.py  free_nerf_config.py
